--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ java {
 }
 
 ext {
-    version = "0.3.4"
+    version = "0.3.5"
     repoUrl = 'https://github.com/simonpoole/pmtiles-reader.git'
     spdxId = 'BSD 3-Clause'
 }
@@ -112,4 +112,5 @@ dependencies {
     implementation 'org.jetbrains:annotations:24.0.1'
     testImplementation 'org.jetbrains:annotations:24.0.1'
     testImplementation 'junit:junit:4.12'
+    testImplementation "com.squareup.okhttp3:mockwebserver:3.12.13"
 }
